--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
       <div class="card">
         <h1>Contact Me</h1>
         <p style="margin-top:10px; color:#333;">
-          Send a message using the form below (demo only).
+          Please complete the form below to send a message.
         </p>
       </div>
     </section>
@@ -68,7 +68,7 @@
 
   <footer>
     <div class="container">
-      <p>© <span id="year"></span> Your Name.</p>
+      <p>© <span id="year"></span> Sabin Ghimire.</p>
     </div>
   </footer>
 
