--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <header>
     <div class="container">
-      <nav class="navbar">
-        <a class="brand" href="index.html">Sabin's<span>Portfolio</span></a>
+      <nav  class="navbar">
+        <a class="brand" href="index.html">AJAY<span>Portfolio</span></a>
 
         <div class="nav-links" aria-label="Primary navigation">
           <a class="active" href="index.html">Home</a>
@@ -21,7 +21,7 @@
         </div>
 
         <button class="menu-btn" type="button" data-menu-btn aria-expanded="false" aria-controls="mobileMenu">
-          ☰ <span>Menu</span>
+          <span>☰</span> <span>Menu</span>
         </button>
       </nav>
     </div>
@@ -88,8 +88,7 @@
       <div class="card">
         <h2>About Me</h2>
         <p style="margin-top:10px;">
-          I enjoy building fast, accessible UI and learning new technologies.
-          I’m currently working on small web apps and portfolio projects.
+        I work with Siemens PLCs and HMI systems to build efficient and user-friendly industrial automation solutions.
         </p>
       </div>
     </section>
