--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
       <div class="card">
         <h1>Projects</h1>
         <p style="margin-top:10px; color:#333;">
-          A few sample projects. Replace images, text, and links with your own.
+        This projects demonstrate the design and implementation of a Siemens PLC control system used to automate and monitor an industrial process, ensuring reliable and safe operation.
         </p>
       </div>
     </section>
@@ -45,33 +45,34 @@
     <section>
       <div class="projects-grid">
         <article class="card project">
-          <img src="assets/project1.jpg" alt="Project 1 image" />
-          <h3>Project One</h3>
-          <p>Simple landing page with responsive layout and clean UI.</p>
+          <img src="assets/conveyer_station.png" alt="Project 1 image" />
+          <h3>Automated Production Line</h3>
+          <p>Industrial automation system with conveyor and drilling using Siemens PLC.</p>
+          <div class="tags">
+            <span class="tag">Siemens PLC</span>
+            <span class="tag">TIA Portal</span>
+          </div>
+        </article>
+
+        <article class="card project">
+          <img src="assets/drilling_station.png" alt="Project 2 image" />
+          <h3>PLC Picking Machine</h3>
+          <p>Siemens PLC–based picking machine with manual, reference, and automatic control modes.</p>
+          <div class="tags">
+            <span class="tag">PLC</span>
+            <span class="tag">HMI</span>
+          </div>
+        </article>
+
+        <article class="card project">
+          <img src="assets/PROJECT_UI.png" alt="Project 3 image" />
+          <h3>Frontend Developer</h3>
+          <p></p>
           <div class="tags">
             <span class="tag">HTML</span>
+            <span class="tag">JS</span>
             <span class="tag">CSS</span>
-          </div>
-        </article>
-
-        <article class="card project">
-          <img src="assets/project2.jpg" alt="Project 2 image" />
-          <h3>Project Two</h3>
-          <p>JavaScript mini app with interactive components.</p>
-          <div class="tags">
-            <span class="tag">JavaScript</span>
-            <span class="tag">UI</span>
-          </div>
-        </article>
-
-        <article class="card project">
-          <img src="assets/project1.jpg" alt="Project 3 image" />
-          <h3>Project Three</h3>
-          <p>Portfolio section with image + video demo.</p>
-          <div class="tags">
-            <span class="tag">Responsive</span>
-            <span class="tag">Media</span>
-          </div>
+          </div>Modern portfolio website built with responsive layout and clean, accessible UI.
         </article>
       </div>
     </section>
@@ -79,7 +80,7 @@
 
   <footer>
     <div class="container">
-      <p>© <span id="year"></span> Your Name.</p>
+      <p>© <span id="year"></span> Sabin Ghimire.</p>
     </div>
   </footer>
 
