--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="container">
       <nav  class="navbar">
-        <a class="brand" href="index.html">AJAY<span>Portfolio</span></a>
+        <a class="brand" href="index.html">Sabin's<span>Portfolio</span></a>
 
         <div class="nav-links" aria-label="Primary navigation">
           <a class="active" href="index.html">Home</a>
