--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Portfolio | Projects</title>
+  <title>Sabin | Projects</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -11,7 +11,7 @@
   <header>
     <div class="container">
       <nav class="navbar">
-        <a class="brand" href="index.html">My<span>Portfolio</span></a>
+        <a class="brand" href="index.html">Sabin</a>
 
         <div class="nav-links" aria-label="Primary navigation">
           <a href="index.html">Home</a>
