--- a/contact.html
+++ b/contact.html
@@ -66,11 +66,16 @@
     </section>
   </main>
 
-  <footer>
+  <footer class="footer">
+  
     <div class="container">
       <p>© <span id="year"></span> Sabin Ghimire.</p>
+      <a href="https://www.linkedin.com" target="_blank" class="linkedin">
+    LinkedIn
+  </a>
     </div>
   </footer>
+
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
     (function () { emailjs.init("76kAlcxApm1sEE3S1"); })();
