--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <a class="active" href="index.html">Home</a>
           <a href="projects.html">Projects</a>
           <a href="contact.html">Contact</a>
-          <a href="https://fi.linkedin.com/" target="_blank" rel="noopener">LinkedIn</a>
+          
         </div>
 
         <button class="menu-btn" type="button" data-menu-btn aria-expanded="false" aria-controls="mobileMenu">
@@ -106,7 +106,7 @@
     </section>
   </main>
 
-  <footer class="site-footer">
+  <footer class="footer">
     <div class="container">
       <p>© <span id="year"></span> Sabin Ghimire. All rights reserved.</p>
     </div>
