--- a/projects.html
+++ b/projects.html
@@ -78,7 +78,8 @@
     </section>
   </main>
 
-  <footer>
+
+  <footer class="footer">
     <div class="container">
       <p>© <span id="year"></span> Sabin Ghimire.</p>
     </div>
