fixed the projects

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </section>
   </main>
 
-  <footer class="site-footer">
+  <footer class="footer">
     <div class="container">
       <p>© <span id="year"></span> Sabin Ghimire. All rights reserved.</p>
     </div>
